--- a/package.json
+++ b/package.json
@@ -20,19 +20,26 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@fortawesome/angular-fontawesome": "^0.2.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.6",
+    "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "angular2-token": "^0.2.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "install": "^0.12.2",
     "jquery": "^3.3.1",
     "ng-contenteditable": "^2.0.2",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-toastr": "^9.1.0",
+    "npm": "^6.4.1",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.3.3",
     "underscore": "^1.9.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular-devkit/build-angular": "^0.8.5",
     "@angular/cli": "~6.2.5",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
