--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/angular-fontawesome": "^0.2.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.6",
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
+    "@ngrx/store": "^6.1.0",
     "angular2-token": "^0.2.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
@@ -30,6 +31,7 @@
     "install": "^0.12.2",
     "jquery": "^3.3.1",
     "ng-contenteditable": "^2.0.2",
+    "ngrx-store-logger": "^0.2.2",
     "ngx-bootstrap": "^3.0.1",
     "ngx-toastr": "^9.1.0",
     "npm": "^6.4.1",
